# model-editor

./: .gitignore  CMakeLists.txt
include/: model.h  onnx-ml.pb.cc  onnx-ml.pb.h  onnx-operators-ml.pb.cc  onnx-operators-ml.pb.h  types.h  utils.h
protobuf/: onnx-ml.proto
src/: model-editor.cpp  models.cpp
